# mesh_simulator

./: Cargo.toml  ventana.txt
src/: main.rs
src/Neighborhood/: mod.rs  neighborhood.rs  vecinos_orto.rs  vecinos_triangular.rs  vecinosh.rs
src/geometry/: cell_geometry.rs  gen_polygon.rs  geometry.rs  mod.rs  polygon.rs  shape.rs  transform.rs
src/simulation/: conway.rs  mod.rs  simulation.rs
src/ui/: app.rs  bottom_panel.rs  layout.rs  left_panel.rs  menu.rs  mod.rs  right_panel.rs  theme.rs  viewport.rs
src/world/: mod.rs  world.rs
