[package]
name = "cellular_automata"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.103"
eframe = "0.31"
env_logger = "0.11.11"
glam = "0.33.1"
log = "0.4.33"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
